refactor: brug custom exceptions og ryd service validering op